--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "earthquake-design-ws",
   "version": "0.1.0",
-  "description": "Seismic design parameters webservice",
+  "description": "Web service provided by the U.S. Geological Survey for computing seismic design parameters compatible with various building code reference documents.",
   "repository": {
     "type": "git",
     "url": "https://github.com/usgs/earthquake-design-ws.git"
@@ -10,12 +10,12 @@
     "usgs"
   ],
   "scripts": {
-    "coverage": "istanbul cover _mocha -- -u exports \"test/**/*Test.js\" -R spec",
+    "coverage": "istanbul cover _mocha -- -u exports \"test/**/*.spec.js\" -R spec",
     "dev": "npm-run-all --parallel watch start",
-    "install": "node src/lib/pre-install",
+    "postinstall": "node configurer/configure.js",
     "lint": "eslint \"**/*.js\"",
     "start": "nodemon --watch src src/server.js",
-    "test": "mocha \"test/**/*Test.js\" --reporter spec",
+    "test": "mocha \"test/**/*.spec.js\" --reporter spec",
     "uninstall": "node src/lib/uninstall",
     "watch": "watch \"npm run lint && npm run test\" src test"
   },
@@ -36,12 +36,11 @@
     "istanbul": "^0.4.4",
     "mocha": "^3.0.2",
     "npm-run-all": "^3.0.0",
-    "pg-promise": "^5.3.2",
     "pre-commit": "^1.1.3",
     "sinon": "^1.17.4",
     "watch": "^0.19.1"
   },
   "engines": {
-    "node": ">=4.5.0"
+    "node": "4.5.0"
   }
 }
