--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
 sudo: false
-language: php
-php:
-  - '5.6'
+language: node_js
+node_js:
+  - 4.5.0
 env:
   - NON_INTERACTIVE=true
 before_install:
-  - composer self-update
-  - nvm install 4.5.0
-  - nvm use 4.5.0
   - npm --version
   - node --version
   - npm list -g
