--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ install:
   - npm install
 
 script:
+  - npm start
   - npm run coverage
+  - npm run test
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
