--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "pg": "^6.1.5"
   },
   "devDependencies": {
+    "byline": "^5.0.0",
     "chai": "^3.5.0",
     "eslint": "^3.1.1",
     "istanbul": "^0.4.4",
     "mocha": "^3.0.2",
+    "node-libcurl": "^1.1.0",
     "npm-run-all": "^4.0.2",
     "pre-commit": "^1.1.3",
     "sinon": "^1.17.4",
