--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mocha": "^3.0.2",
     "node-libcurl": "^1.1.0",
     "npm-run-all": "^4.0.2",
+    "pg-copy-streams": "^1.2.0",
     "pre-commit": "^1.1.3",
     "sinon": "^1.17.4",
     "watch": "^1.0.2"
