--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "lint": "eslint \"**/*.js\"",
     "postinstall": "node configurer/configure.js",
     "qc": "mocha \"test/qc/**/*.qc.js\" --reporter spec",
-    "qcdoc": "mocha \"test/qc/**/*.qc.js\" --reporter ../../../gh-reporter",
     "start": "nodemon --watch src src/server.js",
     "test": "mocha \"test/**/*.spec.js\" --reporter spec",
     "uninstall": "node src/lib/uninstall",
+    "update-qc": "mocha \"test/qc/**/*.qc.js\" --reporter ../../../gh-reporter",
     "watch": "watch \"npm run lint && npm run test\" src test"
   },
   "pre-commit": [
