--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "postinstall": "node configurer/configure.js",
     "qc": "mocha \"test/qc/**/*.qc.js\" --reporter spec",
     "start": "nodemon --watch src src/server.js",
-    "test": "mocha \"test/**/*.spec.js\" --reporter spec",
+    "test": "nyc --reporter=html --reporter=text mocha \"test/**/*.spec.js\" --reporter spec",
     "uninstall": "node src/lib/uninstall",
     "update-qc": "mocha \"test/qc/**/*.qc.js\" --reporter ../../../gh-reporter",
     "watch": "watch \"npm run lint && npm run test\" src test"
@@ -44,7 +44,8 @@
     "pg-copy-streams": "^1.2.0",
     "pre-commit": "^1.1.3",
     "sinon": "^2.1.0",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "nyc": "^10.3.2"
   },
   "engines": {
     "node": "4.5.0"
