--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "usgs"
   ],
   "scripts": {
-    "coverage": "istanbul cover _mocha -- -u exports \"test/**/*.spec.js\" -R spec",
+    "coverage": "istanbul cover --report cobertura _mocha -- -u exports \"test/**/*.spec.js\" -R spec",
     "dev": "npm-run-all --parallel watch start",
     "lint": "eslint \"**/*.js\"",
     "postinstall": "node configurer/configure.js",
     "qc": "mocha \"test/qc/**/*.qc.js\" --reporter spec",
     "start": "nodemon --watch src src/server.js",
-    "test": "nyc --reporter=html --reporter=text mocha \"test/**/*.spec.js\" --reporter spec",
+    "test": "mocha \"test/**/*.spec.js\" --reporter spec",
     "uninstall": "node src/lib/uninstall",
     "update-qc": "mocha \"test/qc/**/*.qc.js\" --reporter ../../../gh-reporter",
     "watch": "watch \"npm run lint && npm run test\" src test"
@@ -30,6 +30,7 @@
     "express": "^4.14.0",
     "extend": "^3.0.0",
     "inquirer": "^3.0.6",
+    "istanbul": "^0.4.5",
     "nodemon": "^1.9.2",
     "pg": "^6.1.5"
   },
