Cleaned up dependencies.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "express": "^4.14.0",
     "extend": "^3.0.0",
     "inquirer": "^3.0.6",
-    "istanbul": "^0.4.5",
+    "morgan": "^1.8.2",
     "nodemon": "^1.9.2",
     "pg": "^6.1.5"
   },
@@ -49,6 +49,6 @@
     "nyc": "^10.3.2"
   },
   "engines": {
-    "node": "4.5.0"
+    "node": "6.11.2"
   }
 }
