--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,14 @@
       "error",
       2,
       {
-        "VariableDeclarator": 2
+        "VariableDeclarator": 2,
+        "FunctionExpression": {
+          "body": 1,
+          "parameters": 2
+        },
+        "CallExpression": {
+          "arguments": 2
+        }
       }
     ],
     "quotes": [
