--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "npm-run-all --parallel watch start",
     "lint": "eslint \"**/*.js\"",
     "postinstall": "node configurer/configure.js",
+    "smoketest": "cd qc && node smoketest.js",
     "start": "nodemon --watch src src/server.js",
     "test": "mocha \"test/**/*.spec.js\" --reporter spec",
     "uninstall": "node src/lib/uninstall",
