--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint": "^4.7.1",
     "istanbul": "^0.4.4",
     "mocha": "^3.0.2",
-    "node-libcurl": "^1.1.0",
+    "node-libcurl": "1.3.2",
     "npm-run-all": "^4.0.2",
     "nyc": "^10.3.2",
     "pg-copy-streams": "^1.2.0",
