Proposed fix for design category calculation

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "license": "CC0-1.0",
   "dependencies": {
+    "binarysearch": "^1.0.0",
     "express": "^4.14.0",
     "extend": "^3.0.0",
     "inquirer": "^3.0.6",
