--- a/package.json
+++ b/package.json
@@ -30,24 +30,24 @@
     "binarysearch": "^1.0.0",
     "express": "^4.14.0",
     "extend": "^3.0.0",
-    "inquirer": "^3.0.6",
+    "inquirer": "^3.3.0",
     "morgan": "^1.8.2",
     "nodemon": "^1.9.2",
-    "pg": "^6.1.5"
+    "pg": "^6.4.2"
   },
   "devDependencies": {
     "byline": "^5.0.0",
     "chai": "^3.5.0",
     "escape-html": "^1.0.3",
-    "eslint": "4.15.0",
+    "eslint": "^4.15.0",
     "istanbul": "^0.4.4",
-    "mocha": "^3.0.2",
-    "node-libcurl": "1.3.2",
+    "mocha": "^5.2.0",
+    "node-libcurl": "^1.3.3",
     "npm-run-all": "^4.0.2",
-    "nyc": "^10.3.2",
+    "nyc": "^13.2.0",
     "pg-copy-streams": "^1.2.0",
     "pre-commit": "^1.1.3",
-    "sinon": "^2.1.0",
+    "sinon": "^2.4.1",
     "watch": "^1.0.2"
   },
   "engines": {
